[GSCOLLECT-1646] Enhance Javadocs of Iterate.
git-svn-id: svn+ssh://gscollections.svn.services.gs.com/svnroot/gscollections-svn/trunk@894 d5c9223b-1aff-41ac-aadd-f810b4a99ac4